assets/stylesheets/style.css
/* © 2022 REVATI */

@import url(https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap);

html {
	scroll-behavior: smooth;
	font-family: "Zen Kaku Gothic Antique", sans-serif;
}

body {
	color: white;
	text-align: center;
	display: flex;
	flex-direction: column;
	margin: 0;
	overflow-x: hidden;
}

::selection {
	background: #d1ff46;
	color: black;
}

/* ▼ header ▼ */

header {
	position: fixed;
	z-index: 256;
	background-color: #d1ff46;
	width: 100%;
	box-shadow: 0 0 10px 0 black;
	border-bottom: 6px solid #65743b;
}

nav>a.has-img {
	float: left;
	margin-left: 18px;
	margin-top: 8px;
}

header img {
	width: 86px;
	transition: .3s ease-out;
}

header img:hover {
	transform: translateY(-4px) scale(1.32);
	filter: drop-shadow(0 8px 0 #00000080);
	transition: .3s;
}

header nav ul {
	display: flex;
	align-items: center;
	justify-content: right;
}

header nav ul li:last-child {
	margin-right: 2.6em;
}

header nav ul li {
	list-style: none;
	margin: 10px 16px 10px 10px;
}

header nav ul li a {
	color: black;
	font-size: 20px;
	text-decoration: none;
	transition: .3s;
}

header nav ul li a::after {
	content: "";
	position: absolute;
	top: 1.1em;
	pointer-events: none;
	height: 100%;
	width: 0;
	transition: .2s;
}

header nav ul li a:hover::after {
	width: 90px;
	display: block;
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center top;
}

#hd-about:hover::after {
	background-image: url(../images/about.png);
}

#hd-news:hover::after {
	background-image: url(../images/news.png);
}

#hd-team:hover::after {
	background-image: url(../images/team.png);
}

#hd-store:hover::after {
	background-image: url(../images/store.png);
}

#hd-sponsor:hover::after {
	background-image: url(../images/sponsor.png);
}

#hd-contact:hover::after {
	background-image: url(../images/contact.png);
}

/* ▲ header ▲ */

/* ▼ footer ▼ */

footer {
	height: 24vh;
	background-color: #111;
}

.copyright {
	margin-top: 2em;
}

/* ▲ footer ▲ */

/* ▼ Twitter link ▼ */
#twitter {
	text-decoration: none;
	position: fixed;
	right: 4vw;
	bottom: 32px;
	display: none;
}

#twitter div img {
	width: 60px;
	height: 60px;
}

.show-twitter {
	display: inline !important;
	animation: show .2s;
}

@keyframes show {
	0% {
		opacity: 0;
	}

	100% {
		opacity: 1;
	}
}

/* ▲ Twitter link ▲ */

/* ▼ Contact modal ▼ */

#contact-modal {
	position: fixed;
	inset: 0;
	margin: auto;
	max-width: 320px;
	height: 192px;
	background-color: rgb(13, 18, 32);
	border: 3px solid #daf9ff;
	padding: 16px;
}

#contact-modal h1 {
	color: #daf9ff;
	font-size: 24px;
	font-weight: bold;
	margin-bottom: 16px;
}

.modal-close-btn {
	position: absolute;
	top: 4px;
	right: 8px;
	cursor: pointer;
	font-size: 2rem;
	font-weight: bold;
	transition: .2s;
}

.modal-close-btn:hover {
	color: #ff6347;
}

#contact-modal p {
	font-size: 12px;
	margin-bottom: 16px;
	text-align: left;
}

.mail-btn {
	display: inline-block;
	text-decoration: none;
	border: 3px solid #fff9ee;
	color: white;
	font-size: 16px;
	font-weight: 900;
	padding: 4px 6px;
	transition: .3s;
}

.mail-btn:hover {
	background-color: #fff9ee;
	color: #191919;
	box-shadow: 0 5px 0 #cfb27a;
}

.mail-btn:active {
	box-shadow: 0 1px 0 #cfb27a;
	transform: translateY(4px);
}

.show-contact-modal {
	display: block;
	animation: showModal .6s;
}

@keyframes showModal {
	0% {
		opacity: 0;
		transform: translateY(32px);
	}

	100% {
		opacity: 1;
		transform: translateY(0);
	}
}

.hide-contact-modal {
	display: none;
}

@keyframes hideModal {
	0% {
		opacity: 1;
		transform: translateY(0);
	}

	100% {
		opacity: 0;
		transform: translateY(32px);
	}
}

/* ▲ Contact modal ▲ */

